--- a/backend/my-medusa-store/package.json
+++ b/backend/my-medusa-store/package.json
@@ -17,9 +17,9 @@
     "prepare:admin": "node ./scripts/copy-admin-build.js",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "publish:products": "medusa exec ./src/scripts/publish-products.ts",
-  "create:pubkey": "medusa exec ./src/scripts/create-publishable-key.ts",
+    "create:pubkey": "medusa exec ./src/scripts/create-publishable-key.ts",
     "seed:hero-banner": "medusa exec ./src/scripts/create-sample-hero-banner.ts",
-  "create:categories": "medusa exec ./src/scripts/create-categories.ts",
+    "create:categories": "medusa exec ./src/scripts/create-categories.ts",
     "create:sample-video": "medusa exec ./src/scripts/create-sample-video.ts",
     "start": "npm run prepare:admin && medusa start",
     "dev": "medusa develop",
@@ -36,6 +36,8 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@rollup/rollup-darwin-arm64": "^4.55.1",
+    "awilix": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "sqlite3": "^5.1.7"
@@ -45,7 +47,10 @@
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
+    "@types/busboy": "^1.5.4",
     "@types/jest": "^29.5.13",
+    "@types/mime-types": "^3.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
