--- a/backend/my-medusa-store/tsconfig.json
+++ b/backend/my-medusa-store/tsconfig.json
@@ -1,38 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "esModuleInterop": true,
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "lib": ["ES2021"],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "strict": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "declaration": false,
-    "sourceMap": false,
-    "inlineSourceMap": true,
-    "outDir": "./.medusa/server",
-    "rootDir": "./",
-    "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "checkJs": false,
-    "strictNullChecks": true
+    "outDir": "dist",
+    "rootDir": ".",
+    "types": ["node"]
   },
-  "ts-node": {
-    "swc": true
-  },
-  "include": [
-    "**/*",
-    ".medusa/types/*"
-  ],
-  "exclude": [
-    "node_modules",
-    ".medusa/server",
-    ".medusa/admin",
-    ".cache",
-    "typeorm-test.ts",
-    "typeorm-test.js",
-    "src/modules/brands/api/*"
-  ]
+  "include": ["src", "medusa-config.ts", "instrumentation.ts"],
+  "exclude": ["node_modules", ".medusa", "dist", "**/*.spec.ts", "**/*.test.ts", "**/__tests__/**", "integration-tests/**"]
 }
